fix(style): horizational scrollbar is too big

--- a/src/ui/style/index.less
+++ b/src/ui/style/index.less
@@ -32,9 +32,11 @@ body {
 //   background: #E5E5E5;
 // }
 
+
 *::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
+  height: 7px;
 }
 
 *::-webkit-scrollbar-thumb {
